--- a/app/alertStation/app/src/main/res/layout/activity_main.xml
+++ b/app/alertStation/app/src/main/res/layout/activity_main.xml
@@ -5,26 +5,8 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
 
-    <Spinner
-        android:id="@+id/spinner_copmany"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        style="@style/Widget.AppCompat.Spinner.Underlined"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginTop="26dp" />
-
-    <Spinner
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/spinner_city"
-        android:layout_above="@+id/spinner_line"
-        android:layout_alignParentStart="true"
-        android:layout_marginBottom="26dp"
-        style="@style/Widget.AppCompat.Spinner.Underlined"
-        />
-
     <Button
+
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="New Button"
@@ -32,22 +14,61 @@
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true" />
 
-    <Spinner
+    <LinearLayout
+        
+        android:divider="?android:dividerHorizontal"
+        android:showDividers="middle"
+        android:weightSum="8"
+        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/spinner_line"
-        android:layout_centerVertical="true"
+        android:layout_height="match_parent"
         android:layout_alignParentStart="true"
-        style="@style/Widget.AppCompat.Spinner.Underlined"
-        />
-
-    <Spinner
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/spinner_station"
         android:layout_above="@+id/btSave"
-        android:layout_alignParentStart="true"
-        android:layout_marginBottom="75dp"
-        style="@style/Widget.AppCompat.Spinner.Underlined"
-        />
+        android:layout_alignParentTop="true">
+
+        <Spinner
+            android:layout_weight="1"
+            android:id="@+id/spinner_copmany"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentStart="true" />
+
+        <Spinner
+            android:layout_weight="1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/spinner_city"
+            android:layout_below="@+id/spinner_copmany"
+            android:layout_alignParentEnd="true" />
+
+        <Spinner
+            android:layout_weight="1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/spinner_line"
+            android:layout_below="@+id/spinner_city"
+            android:layout_alignParentStart="true" />
+
+        <Spinner
+            android:layout_weight="1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/spinner_station"
+            android:layout_below="@+id/spinner_line"
+            android:layout_alignParentEnd="true" />
+
+        <ImageView
+            android:layout_weight="3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/imageView"
+            android:layout_alignTop="@+id/btSave"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentStart="true"
+            android:layout_toStartOf="@+id/btSave"
+            android:src="@drawable/pic2"
+            android:layout_gravity="center_horizontal" />
+    </LinearLayout>
+
 </RelativeLayout>
