--- a/app/alertStation/app/src/main/res/layout/about.xml
+++ b/app/alertStation/app/src/main/res/layout/about.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="#00B0F0"
+    android:weightSum="1">
 
     <TextView
         android:layout_width="wrap_content"
@@ -9,5 +11,14 @@
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="about"
         android:id="@+id/textView3"
-        android:layout_gravity="center_horizontal" />
+        android:layout_gravity="center_horizontal"
+        android:layout_weight="0.03" />
+
+    <ImageView
+        android:layout_width="327dp"
+        android:layout_height="wrap_content"
+        android:id="@+id/imageView2"
+        android:layout_gravity="center_horizontal"
+        android:src="@drawable/back" />
+
 </LinearLayout>
