--- a/app/alertStation/app/src/main/res/layout/activity_main.xml
+++ b/app/alertStation/app/src/main/res/layout/activity_main.xml
@@ -3,7 +3,10 @@
     android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    tools:context=".MainActivity"
+    android:background="#00B0F0"
+    >
 
     <Button
 
@@ -32,7 +35,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
-            android:layout_alignParentStart="true" />
+            android:layout_alignParentStart="true"
+            />
 
         <Spinner
             android:layout_weight="1"
@@ -48,7 +52,8 @@
             android:layout_height="wrap_content"
             android:id="@+id/spinner_line"
             android:layout_below="@+id/spinner_city"
-            android:layout_alignParentStart="true" />
+            android:layout_alignParentStart="true"
+            />
 
         <Spinner
             android:layout_weight="1"
