--- a/app/alertStation/app/src/main/res/layout/activity_main.xml
+++ b/app/alertStation/app/src/main/res/layout/activity_main.xml
@@ -12,10 +12,10 @@
 
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="New Button"
+        android:text="הפעל התראה"
         android:id="@+id/btSave"
         android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_alignParentStart="true" />
 
     <LinearLayout
 
@@ -27,7 +27,8 @@
         android:layout_height="match_parent"
         android:layout_alignParentStart="true"
         android:layout_above="@+id/btSave"
-        android:layout_alignParentTop="true">
+        android:layout_alignParentTop="true"
+        android:id="@+id/linearLayout">
 
         <Spinner
             android:layout_weight="1"
@@ -75,5 +76,13 @@
             android:src="@drawable/pic2"
             android:layout_gravity="center_horizontal" />
     </LinearLayout>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="ביטול התראה"
+        android:id="@+id/btCancel"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true" />
 
 </RelativeLayout>
