--- a/app/alertStation/app/src/main/res/layout/about.xml
+++ b/app/alertStation/app/src/main/res/layout/about.xml
@@ -4,6 +4,14 @@
     android:layout_height="match_parent"
     android:background="#00B0F0">
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="@string/about"
+        android:id="@+id/textView2"
+        android:layout_gravity="center_horizontal" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
