--- a/app/alertStation/app/src/main/res/layout/activity_main.xml
+++ b/app/alertStation/app/src/main/res/layout/activity_main.xml
@@ -1,89 +1,167 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context=".MainActivity"
+<?xml version="1.0" encoding="utf-8" ?>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:background="#00B0F0"
-    >
-
-    <Button
-
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-
-        android:text="@string/startAlert"
-        android:id="@+id/btSave"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true" />
+    android:weightSum="1">
 
     <LinearLayout
-
-        android:divider="?android:dividerHorizontal"
-        android:showDividers="middle"
-        android:weightSum="8"
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_alignParentStart="true"
-        android:layout_above="@+id/btSave"
-        android:layout_alignParentTop="true"
-        android:id="@+id/linearLayout">
+        android:weightSum="1">
 
-        <Spinner
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:paddingTop="5dp"
+            android:paddingLeft="5dp"
+            android:paddingRight="5dp"
+
+            >
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal"
+                android:paddingTop="5dp"
+                android:paddingLeft="5dp"
+                android:paddingRight="5dp"
+                android:paddingBottom="5dp"
+                android:background="#FFFFFF"
+                >
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:textColor="#ffffff"
+                    android:background="#00B0F0"
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:text="@string/choose_station"
+                    android:textSize="30dp"
+                    />
+
+            </LinearLayout >
+        </LinearLayout >
+
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:paddingTop="5dp"
+            android:paddingLeft="5dp"
+            android:paddingRight="5dp"
+            >
+            <Spinner
             android:layout_weight="1"
             android:id="@+id/spinner_copmany"
+            android:popupBackground="#FFFFFF"
+            android:background="@drawable/spinner__background"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentStart="true"
+            android:layout_height="55dp"
             />
+        </LinearLayout>
 
-        <Spinner
-            android:layout_weight="1"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:paddingTop="5dp"
+            android:paddingLeft="5dp"
+            android:paddingRight="5dp"
+            >
+            <Spinner
+            android:layout_weight="1"
             android:id="@+id/spinner_city"
-            android:layout_below="@+id/spinner_copmany"
-            android:layout_alignParentEnd="true" />
-
-        <Spinner
-            android:layout_weight="1"
+            android:popupBackground="#FFFFFF"
+            android:background="@drawable/spinner__background"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/spinner_line"
-            android:layout_below="@+id/spinner_city"
-            android:layout_alignParentStart="true"
+            android:layout_height="55dp"
             />
+        </LinearLayout>
 
-        <Spinner
-            android:layout_weight="1"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:paddingTop="5dp"
+            android:paddingLeft="5dp"
+            android:paddingRight="5dp"
+            >
+            <Spinner
+            android:layout_weight="1"
+            android:id="@+id/spinner_line"
+            android:popupBackground="#FFFFFF"
+            android:background="@drawable/spinner__background"
+            android:layout_width="match_parent"
+            android:layout_height="55dp"
+            />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingTop="5dp"
+            android:paddingLeft="5dp"
+            android:paddingRight="5dp"
+            >
+            <Spinner
+            android:layout_weight="1"
             android:id="@+id/spinner_station"
-            android:layout_below="@+id/spinner_line"
-            android:layout_alignParentEnd="true" />
+            android:popupBackground="#FFFFFF"
+            android:background="@drawable/spinner__background"
+            android:layout_width="match_parent"
+            android:layout_height="55dp"
+            />
+        </LinearLayout>
+
 
         <ImageView
-            android:layout_weight="3"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/imageView"
-            android:layout_alignTop="@+id/btSave"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentStart="true"
-            android:layout_toStartOf="@+id/btSave"
-            android:src="@drawable/pic2"
-            android:layout_gravity="center_horizontal" />
+            android:scaleType="centerCrop"
+            android:adjustViewBounds="true"
+            android:src="@drawable/home_background1"
+            android:paddingTop="5dp"
+            android:paddingLeft="5dp"
+            android:paddingRight="5dp"
+            />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+
+            android:orientation="horizontal"
+            android:gravity="bottom"
+            android:layout_gravity="bottom"
+            android:paddingTop="5dp"
+            android:paddingLeft="5dp"
+            android:paddingRight="5dp"
+            >
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/startAlert"
+                android:textSize="25sp"
+                android:id="@+id/btSave"
+                android:background="@drawable/button00"
+                android:layout_weight="1"
+                android:layout_gravity="bottom"
+                />
+
+
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/cancelAlert"
+                android:textSize="25sp"
+                android:id="@+id/btCancel"
+                android:background="@drawable/button00"
+                android:layout_weight="1"/>
+        </LinearLayout>
+
     </LinearLayout>
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/cancelAlert"
-        android:id="@+id/btCancel"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true" />
-
-</RelativeLayout>
+</LinearLayout>
