--- a/app/alertStation/app/src/main/res/layout/home.xml
+++ b/app/alertStation/app/src/main/res/layout/home.xml
@@ -18,13 +18,19 @@
             android:id="@+id/imageView3"
             android:scaleType="centerCrop"
             android:adjustViewBounds="true"
-            android:src="@drawable/home_background" />
+            android:src="@drawable/home_background"
+            android:paddingTop="5dp"
+            android:paddingLeft="5dp"
+            android:paddingRight="5dp"
+            />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:paddingTop="1dp"
+            android:paddingTop="5dp"
+            android:paddingLeft="5dp"
+            android:paddingRight="5dp"
             >
 
             <ImageView
@@ -51,7 +57,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:paddingTop="1dp"
+            android:paddingTop="5dp"
+            android:paddingLeft="5dp"
+            android:paddingRight="5dp"
             >
 
             <ImageView
@@ -77,7 +85,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:paddingTop="1dp"
+            android:paddingTop="5dp"
+            android:paddingLeft="5dp"
+            android:paddingRight="5dp"
+
             >
 
             <ImageView
@@ -97,7 +108,36 @@
                 android:layout_height="match_parent"
                 android:background="@drawable/button00"/>
         </LinearLayout >
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal"
+            android:paddingTop="5dp"
+            android:paddingLeft="5dp"
+            android:paddingRight="5dp"
+            android:paddingBottom="5dp"
+
+            >
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal"
+                android:paddingTop="5dp"
+                android:paddingLeft="5dp"
+                android:paddingRight="5dp"
+                android:paddingBottom="5dp"
+                android:background="#FFFFFF"
+                >
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:src="@drawable/lower_icon" />
+
+            </LinearLayout >
+        </LinearLayout >
     </LinearLayout>
+
 
     <ProgressBar
         style="?android:attr/progressBarStyleHorizontal"
