--- a/app/alertStation/app/src/main/res/layout/activity_main.xml
+++ b/app/alertStation/app/src/main/res/layout/activity_main.xml
@@ -19,7 +19,6 @@
             android:paddingTop="5dp"
             android:paddingLeft="5dp"
             android:paddingRight="5dp"
-
             >
             <LinearLayout
                 android:layout_width="match_parent"
@@ -29,8 +28,7 @@
                 android:paddingLeft="5dp"
                 android:paddingRight="5dp"
                 android:paddingBottom="5dp"
-                android:background="#FFFFFF"
-                >
+                android:background="#FFFFFF">
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
@@ -41,7 +39,6 @@
                     android:text="@string/choose_station"
                     android:textSize="30dp"
                     />
-
             </LinearLayout >
         </LinearLayout >
 
